# chex

./: .clang-format  .gitignore  CMakeLists.txt  README
src/: board.c  board.h  chex.c  eval.c  eval.h  game.h  log.c  log.h  move.c  move.h  print.c  print.h  search.c  search.h  util.c  util.h
test/: board_test.cpp  engine.cpp  engine_test.cpp  move_test.cpp  movegen_test.cpp  util_test.cpp
